<resources>
    <string name="app_name">SBTechincalTest</string>
    <string name="welcomeHeadingEn">Welcome back</string>
    <string name="actionSubHeadingEn">Log in to your Student Beans account</string>
    <string name="emailTextFieldHintEn">Email</string>
    <string name="passwordTextFieldHintEn">Password</string>
    <string name="loginButtonTextEn">Log in</string>
    <string name="photosHeadingTextEn">Photos</string>
</resources>
