<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeHeadingEn"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/actionSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/actionSubHeadingEn"
        android:textColor="@color/subHeadingColor"
        app:layout_constraintStart_toStartOf="@+id/welcomeHeading"
        app:layout_constraintTop_toTopOf="@id/welcomeHeading" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailFieldLayout"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/welcomeHeading"
        app:layout_constraintTop_toBottomOf="@+id/actionSubHeading">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/emailTextFieldHintEn" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordFieldLayout"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/emailFieldLayout"
        app:layout_constraintEnd_toEndOf="@id/emailFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/passwordTextFieldHintEn" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonTextEn"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordFieldLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordFieldLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>